# BlueBeats

./: .gitignore  .gitmodules  Dependencies.txt  README.md  build.gradle  gradle.properties  local.properties.template  settings.gradle
app/: build.gradle
app/misc/db_schemas/apps.chocolatecakecodes.bluebeats.database.RoomDB/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about_text_about.html  open_source_licenses.html
app/src/main/java/apps/chocolatecakecodes/bluebeats/: Application.kt  MainActivity.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/database/: DAOs.kt  DbUtils.kt  Entities.kt  RoomDB.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/database/dao/media/: ID3TagDAO.kt  MediaDirDAO.kt  MediaFileDAO.kt  UserTagsDAO.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/database/dao/playlists/: DynamicPlaylistDAO.kt  DynamicPlaylistDao.kt  ID3TagsRuleDao.kt  IncludeRuleDao.kt  PlaylistsManager.kt  RegexRuleDao.kt  RuleGroupDao.kt  StaticPlaylistDao.kt  TimeSpanRuleDao.kt  UsertagsRuleDao.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/database/entity/media/: ID3TagReferenceEntity.kt  ID3TagTypeEntity.kt  ID3TagValueEntity.kt  MediaDirEntity.kt  MediaFileEntity.kt  UserTagEntity.kt  UserTagRelation.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/database/entity/playlists/: DynamicPlaylistEntity.kt  ID3TagsRuleEntity.kt  ID3TagsRuleEntry.kt  IncludeRuleDirEntry.kt  IncludeRuleEntity.kt  IncludeRuleFileEntry.kt  RegexRuleEntity.kt  RuleGroupEntity.kt  RuleGroupEntry.kt  ShareEmbed.kt  StaticPlaylistEntity.kt  StaticPlaylistEntry.kt  UsertagsRuleEntry.kt  (+2 more)
app/src/main/java/apps/chocolatecakecodes/bluebeats/database/maintenance/: PlaylistRuleGarbageCollector.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/database/migrations/: Migration6to7.kt  Migration8to9.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/media/: MediaDB.kt  MediaParser.kt  VlcManagers.kt  VlcPlayerManager.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/media/fileaccess/: AndroidFs.kt  AndroidMediaStore.kt  FileEnumerator.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/media/model/: Constants.kt  Media.kt  MediaDir.kt  MediaDirImpl.kt  MediaFile.kt  MediaFileImpl.kt  MediaNode.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/media/player/: VlcPlayer.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/media/playlist/: Playlist.kt  PlaylistIterator.kt  PlaylistsManager.kt  StaticPlaylist.kt  TempPlaylist.kt  TimeSpanItemPlayerController.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/service/: PlayerService.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/util/: CachedReference.kt  Debouncer.kt  Destructor.kt  EventualValue.kt  LazyVar.kt  MediaDBEventRelay.kt  OnceSettable.kt  RequireNotNull.kt  SimpleObservable.kt  SmartBackPressedCallback.kt  ThumbSetterHelper.kt  TimerThread.kt  Utils.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/util/serializers/: ID3TagsRuleParcel.kt  IncludeRuleParcel.kt  MediaFileItemSerializer.kt  PlaylistItemSerializer.kt  RegexRuleParcel.kt  RuleGroupParcel.kt  RuleParcel.kt  RuleShareParcel.kt  TimeSpanItemSerializer.kt  TimeSpanRuleParcel.kt  UsertagsRuleParcel.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/view/: AboutPopup.kt  DynplaylistEditorFragment.kt  DynplaylistEditors.kt  FileBrowser.kt  FileBrowserViewModel.kt  FileDetails.kt  MainActivity.kt  MainActivityViewModel.kt  Player.kt  PlayerViewModel.kt  Playlists.kt  PlaylistsViewModel.kt  Search.kt  SearchViewModel.kt  SegmentedSeekBar.kt  SelectableItem.kt  SpinnerTextbox.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/view/specialitems/: MediaDirItem.kt  MediaFileItem.kt  NestedExpandableItem.kt  SelectableItem.kt
app/src/main/java/apps/chocolatecakecodes/bluebeats/view/specialviews/: DynplaylistEditors.kt  ExpandableCard.kt  FileBrowserFragment.kt  FileBrowserView.kt  SegmentedSeekBar.kt  SpinnerTextbox.kt  TimeEdit.kt
app/src/main/res/drawable/: background_control.xml  ic_arrow_corner_bottomright.xml  ic_baseline_file_removed.xml  ic_baseline_pause.xml  ic_baseline_play.xml  ic_dots_vertical.xml  ic_intersect.xml  ic_launcher_foreground.xml  ic_union.xml  icon.xml  shape_border.xml
app/src/main/res/layout/: about_view.xml  activity_main.xml  filebrowser_fragment.xml  filedetails_entry_tag.xml  filedetails_entry_usertag.xml  filedetails_fragment.xml  fragment_file_browser.xml  main_activity.xml  player_fragment.xml  player_playlist_fragment.xml  playlists_dyneditor_fragment.xml  playlists_entry_list.xml  playlists_fragment.xml  search_fragment.xml  segmented_seek_bar.xml  view_media_file.xml  view_media_node.xml  view_pl_timespan_item.xml
app/src/main/res/menu/: file_browser_menu.xml  player_menu.xml  search_menu.xml
app/src/main/res/raw/: about_text_about.md  about_text_licenses.md
app/src/main/res/values/: attrs_segmented_seek_bar.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
taglib/: build.gradle
taglib/lib_taglib/: .gitignore  build.gradle
taglib/lib_taglib/src/main/: AndroidManifest.xml
taglib/lib_taglib/src/main/cpp/taglib/mpeg/id3v2/: id3v2.2.0.txt  id3v2.3.0.txt  id3v2.4.0-frames.txt  id3v2.4.0-structure.txt
taglib/src/main/: AndroidManifest.xml
taglib/src/main/cpp/: CMakeLists.txt  taglib.cpp  usertags_parser.cpp  usertags_parser.h
taglib/src/main/java/apps/chocolatecakecodes/bluebeats/taglib/: Chapter.java  ParseException.java  TagFields.java  TagParser.java  UserTags.java
(+33 files in other folders)
